changing script to reflect the new options